# message_spliter

./: README.md  msg_split.py  pyproject.toml
html/: false_test.html  min_test.html
tests/: test_msg_split.py
utils/: is_too_long_string.py  reduce_elements.py
