[tool.poetry]
name = "maddevs-test"
version = "1.0.0"
description = "Split a HTML file's content into smaller parts"
authors = ["SouLlution"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
